fix: restore jdk8 extension compatibility