@@ -113,7 +113,7 @@ public class NatsMQConsumerEndpointRegistrar implements AutoCloseable {
      * 返回已登记的监听器定义。
      */
     public List<MQListenerDefinition> registeredDefinitions() {
-        return List.copyOf(registeredDefinitions);
+        return java.util.Collections.unmodifiableList(new java.util.ArrayList<MQListenerDefinition>(registeredDefinitions));
     }
 
     /**
